--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-.ind
-.aux
-.png
-.idx
-.toc
-.log
-.dvi
-.ilg
-.log
-\#
+*.ind
+*.aux
+*.png
+*.idx
+*.toc
+*.log
+*.dvi
+*.ilg
+*.log
+*.lof
+*.lot
+.\#*
+\#*
+
